Refactor, split out bootstrap and mod
Added missing AT

ForgeInstaller no longer been translated